--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -69,7 +69,7 @@
 <body id="{% block body_id %}body{% endblock %}">
 <!-- Navbar
     ============= -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div id="hs-nav-bar" class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -95,22 +95,42 @@
                 <ul class="nav navbar-nav navbar-right hidden-xs">
                     {% ifinstalled mezzanine.accounts %}
                     {% if request.user.is_authenticated %}
-                    <li id="profile-menu" class="display-block">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ request.user|best_name }} <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
+                        <li id="profile-menu" class="display-block">
+{#                            {% if request.user.userprofile.picture and request.user.userprofile.picture.url %}#}
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                         class="round-image profile-pic-thumbnail pull-left">
+                                    </div>
+                                </a>
+{#                            {% else %}#}
+{#                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
+{#                                    <div class="nav-bar-profile-pic-thumbnail round-image pull-left"></div>#}
+{#                                </a>#}
+{#                            {% endif %}#}
+{#                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ request.user|best_name }} <b class="caret"></b></a>#}
+                        <ul class="dropdown-menu arrow_box">
                             <li class="account">
                                 {% if request.user.userprofile.picture and request.user.userprofile.picture.url%}
                                 <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
-                                     class="round-image profile-pic-thumbnail pull-left">
+                                     class="round-image dropdown-profile-pic-thumbnail pull-left">
                                 </div>
                                 {% else %}
-                                    <div class="profile-pic-thumbnail round-image user-icon pull-left"></div>
+                                    <div class="dropdown-profile-pic-thumbnail round-image dropdown-user-icon pull-left"></div>
                                 {% endif %}
-                                <span>
+
+                                <div>
                                     <strong>{{ request.user }}</strong>
-                                    {% if request.user.email %}<br/>{{ request.user.email }}{% endif %}
-                                </span>
-                                <span><a href="/user/{{ user.id }}/">Profile</a> | <a href="{% url 'logout' %}" id="signout-menu">Sign out</a></span>
+                                </div>
+
+                                {% if request.user.email %}
+                                    <div class="text-muted">{{ request.user.email }}</div>
+                                {% endif %}
+
+                                <div class="dropdown-footer">
+                                    <a href="/user/{{ user.id }}/" class="btn btn-primary">Profile</a>
+                                    <a href="{% url 'logout' %}" id="signout-menu" class="btn btn-default">
+                                        <span class="glyphicon glyphicon-log-out"></span> Sign out</a></span>
+                                </div>
                             </li>
                         </ul>
                     </li>
