--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -138,11 +138,11 @@
         var offset = getScrollXY();
         if (offset[1] > 0) {
             $("#hs-nav-bar").css("background-color", "rgb(0, 45, 62)");
-            $("#hs-nav-bar").css("border","");
+            $("#hs-nav-bar").css("border-color", "");
         }
         else {
             $("#hs-nav-bar").css("background-color", "rgba(0, 0, 0, 0.58)");
-            $("#hs-nav-bar").css("border", "0");
+            $("#hs-nav-bar").css("border-color", "rgba(0, 0, 0, 0)");
         }
     }
 
