--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -61,17 +61,19 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
 }
 
 .navbar-nav > li > .dropdown-menu {
-    margin-top: 55px;
-    margin-right: -47px;
-    width: 300px;
-    height: 150px;
-    padding: 0;
-    background: #FFF;
-    border: 1px solid #333;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+	margin-top: 18px;
+	margin-right: -12px;
+	width: 300px;
+	height: 160px;
+	padding: 0;
+	background: #FFF;
+	border: 1px solid #909090;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
+	-moz-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
+	-webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
@@ -719,12 +721,18 @@ li.account p{
 
 #profile-menu .dropdown-footer {
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
     border-top: 1px solid #CCC;
     width: 100%;
     margin: -20px;
-    padding: 10px;
-    background: #DDD;
+	padding: 10px;
+	background: #DDD;
+	-webkit-border-bottom-right-radius: 4px;
+	-webkit-border-bottom-left-radius: 4px;
+	-moz-border-radius-bottomright: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	border-bottom-right-radius: 4px;
+	border-bottom-left-radius: 4px;
 }
 
 
@@ -2976,23 +2984,24 @@ span.carousel-control-icon {
 }
 
 .nav-bar-profile-pic-thumbnail {
-    width: 0;
-    height: 0;
+    width: 40px;
+    height: 40px;
 }
 
 .nav-bar-profile-pic-thumbnail::before {
-    content: "\e008";
-    font-family: "Glyphicons Halflings";
-    float: left;
-    font-size: 23px;
-    color: #2D9EB3;
-    border: 2px solid #ddd;
-    height: 25px;
-    width: 25px;
-    border-radius: 50%;
-    line-height: 16px;
-    text-align: center;
-    margin-top: 13px;
+	content: "\e008";
+	font-family: "Glyphicons Halflings";
+	float: left;
+	font-size: 28px;
+	color: #2D9EB3;
+	border: 2px solid #ddd;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	line-height: 22px;
+	text-align: center;
+	margin-top: 10px;
+	margin-left: 6px;
 }
 
 .arrow_box:after, .arrow_box:before {
@@ -3015,7 +3024,7 @@ span.carousel-control-icon {
 
 .arrow_box:before {
     border-color: rgba(194, 225, 245, 0);
-    border-bottom-color: #333;
+    border-bottom-color: #909090;
     border-width: 11px;
     margin-left: -11px;
 }
