--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -7,7 +7,7 @@
     <!-- Showcase
     ================ -->
 
-    <div id="home-page-carousel" class="carousel slide panel" data-ride="carousel">
+    <div id="home-page-carousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
 
         <!-- Wrapper for slides -->
@@ -41,6 +41,27 @@
             </div>
         </div>
 
+        <ol class="carousel-controls carousel-indicators">
+            <li data-target="#home-page-carousel" data-slide-to="0" class="active">
+                <div class="carousel-control-block">
+                    <span class="carousel-control-icon glyphicon glyphicon-share "></span>
+                    <h5>SHARE</h5>
+                </div>
+            </li>
+            <li data-target="#home-page-carousel" data-slide-to="1">
+                <div class="carousel-control-block">
+                    <span class="carousel-control-icon glyphicon glyphicon-search"></span>
+                    <h5>DISCOVER</h5>
+                </div>
+            </li>
+            <li data-target="#home-page-carousel" data-slide-to="2">
+                <div class="carousel-control-block">
+                    <span class="carousel-control-icon glyphicon glyphicon-user"></span>
+                    <h5>COLLABORATE</h5>
+                </div>
+            </li>
+        </ol>
+
         <!-- Left and right controls -->
         <a class="left carousel-control" href="#home-page-carousel" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -50,22 +71,6 @@
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-    </div>
-    <div class="carousel-controls">
-        <div class="carousel-control-block" data-target="#home-page-carousel" data-slide-to="0">
-            <span class="carousel-control-icon glyphicon glyphicon-share "></span>
-            <h5>SHARE</h5>
-        </div>
-
-        <div class="carousel-control-block" data-target="#home-page-carousel" data-slide-to="1">
-            <span class="carousel-control-icon glyphicon glyphicon-search"></span>
-            <h5>DISCOVER</h5>
-        </div>
-
-        <div class="carousel-control-block" data-target="#home-page-carousel" data-slide-to="2">
-            <span class="carousel-control-icon glyphicon glyphicon-user"></span>
-            <h5>COLLABORATE</h5>
-        </div>
     </div>
 
     <div class="container">
